<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">QuickLinkChat</string>
    <string name="fab_message_description">Compose a new message</string>
    <string name="username_content_description">Username</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="Confirm">Confirm</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="need_an_account">Need an account?</string>
    <string name="sign_up">Sign up !</string>
    <string name="calls">Calls</string>
    <string name="feedback">Feedback</string>
    <string name="enter_your_feedback_here">Enter your feedback here</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="our_other_plateforms">Our other plateforms</string>
    <string name="instagram">Instagram</string>
    <string name="telegram">Telegram</string>
    <string name="facebook">Facebook</string>
    <string name="confrom">Confrom</string>
    <string name="username">Username</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="status">Status</string>
    <string name="message">Message</string>
    <string name="username1">Username</string>
    <string name="sign_up1">Sign Up !</string>
    <string name="create_a_new_account1">Create a new account</string>
    <string name="email1">Email</string>
    <string name="email2">Email</string>
    <string name="password1">Password</string>
    <string name="password2">Password</string>
    <string name="re_enter_password1">Re-enter Password</string>
    <string name="sign_up3">Sign up</string>
    <string name="log_in_5">Log in !</string>
    <string name="username8">Username</string>


</resources>