<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BA135E40"
    tools:context=".registration">


    <TextView
        android:id="@+id/text7"
        android:layout_width="@dimen/_241sdp"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginBottom="424dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="clip_horizontal|center|center_horizontal"
        android:text="@string/create_a_new_account1"
        android:textColor="#F5F2F2"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginBottom="320dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/email2"
        android:textColor="#F5F2F2"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="218dp"
        android:layout_height="31dp"
        android:layout_marginBottom="392dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/username1"
        android:textColor="#F5F2F2"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginBottom="244dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/password1"
        android:textColor="#F5F2F2"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="207dp"
        android:layout_height="35dp"
        android:layout_marginBottom="168dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/re_enter_password1"
        android:textColor="#F5F2F2"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/profile001"
        android:layout_width="188dp"
        android:layout_height="180dp"
        android:layout_marginBottom="516dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/signuplogo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="clip_horizontal|center|center_horizontal"
        android:text="@string/sign_up1"
        android:textColor="#F5F2F2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <EditText
        android:id="@+id/rgemail"
        android:layout_width="295dp"
        android:layout_height="51dp"
        android:layout_marginBottom="292dp"
        android:ems="10"
        android:hint="@string/email1"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/rgpassword"
        android:layout_width="295dp"
        android:layout_height="51dp"
        android:layout_marginBottom="216dp"
        android:ems="10"
        android:hint="@string/password2"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/rgrepassword"
        android:layout_width="295dp"
        android:layout_height="51dp"
        android:layout_marginBottom="140dp"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="318dp"
        android:layout_height="56dp"
        android:layout_marginTop="624dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_up3"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#114232"
        android:textColorHint="#114232"
        android:textColorLink="#114232"
        android:textStyle="bold"
        app:backgroundTint="#78A083"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#114232" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|clip_vertical|center_horizontal"
        android:text="@string/already_have_an_account"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/login"
        android:layout_width="98dp"
        android:layout_height="23dp"
        android:text="@string/log_in_5"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <EditText
        android:id="@+id/rgusername"
        android:layout_width="295dp"
        android:layout_height="51dp"
        android:layout_marginBottom="356dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>