<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">


    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/user_11663136"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@id/profileImageView"
        android:contentDescription="@string/fab_message_description"
        android:text="@string/username8"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="0dp"
        android:background="#E2F4C5" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textColor="@color/white"
        android:layout_below="@id/usernameTextView"
        android:layout_toEndOf="@id/profileImageView"
        android:layout_marginEnd="8dp" />


</RelativeLayout>
