<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BA135E40"
    android:hapticFeedbackEnabled="false"
    tools:context=".login">

    <TextView
        android:id="@+id/t1"
        android:layout_width="@dimen/_241sdp"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginBottom="364dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="clip_horizontal|center|center_horizontal"
        android:text="@string/sign_in_to_continue"
        android:textColor="#F5F2F2"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/t6"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginBottom="308dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/email"
        android:textColor="#F5F2F2"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginBottom="204dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/password"
        android:textColor="#F5F2F2"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="239dp"
        android:layout_height="222dp"
        android:layout_marginBottom="492dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/user_11663136" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="412dp"
        android:layout_height="70dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="clip_horizontal|center|center_horizontal"
        android:text="@string/login"
        android:textColor="#F5F2F2"
        android:textSize="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <EditText
        android:id="@+id/editTextlogEmail"
        android:layout_width="295dp"
        android:layout_height="51dp"
        android:layout_marginBottom="268dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextlogPassword"
        android:layout_width="295dp"
        android:layout_height="51dp"
        android:layout_marginBottom="160dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logbutton"
        android:layout_width="318dp"
        android:layout_height="56dp"
        android:layout_marginTop="596dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#114232"
        android:textColorHint="#114232"
        android:textColorLink="#114232"
        android:textStyle="bold"
        app:backgroundTint="#78A083"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#114232" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|clip_vertical|center_horizontal"
        android:text="@string/need_an_account"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

    <TextView
        android:id="@+id/singup"
        android:layout_width="110dp"
        android:layout_height="27dp"
        android:gravity="center|clip_vertical|center_horizontal"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

</androidx.constraintlayout.widget.ConstraintLayout>